<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/firstFragment_menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/toolbar_search_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/firstFragment_menu_first"
        android:title="@string/toolbar_first_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/firstFragment_menu_second"
        android:title="@string/toolbar_second_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/firstFragment_menu_third"
        android:title="@string/toolbar_third_title"
        app:showAsAction="never" />
</menu>