<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_electro" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/charcoal_grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Холодная вода" />

        <ImageView
            android:id="@+id/serialNumberIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_serial_number"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/serialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:textColor="@color/charcoal_grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/serialNumberIcon"
            app:layout_constraintStart_toEndOf="@id/serialNumberIcon"
            app:layout_constraintTop_toTopOf="@id/serialNumberIcon"
            tools:text="54656553" />
        <!-- 1-й тип элемента с 1 полем ввода и текстом над ним-->
        <TextView
            android:id="@+id/newMeasuresHint_firstType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/statisticsItem_newMeasures_label"
            android:textColor="@color/warm_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serialNumber" />

        <EditText
            android:id="@+id/etNewMeasures_firstType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/statisticsItem_newMeasures_hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/measurementInfo"
            app:layout_constraintEnd_toStartOf="@id/btnSubmit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMeasuresHint_firstType" />

        <!-- 2-й тип элемента с несколькими полями и хинтами -->
        <TextView
            android:id="@+id/newMeasuresHint_secondType_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/statisticsItem_newMeasures_dayLabel"
            app:layout_constraintStart_toStartOf="@id/etNewMeasures_secondType_day"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <TextView
            android:id="@+id/newMeasuresHint_secondType_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statisticsItem_newMeasures_nightLabel"
            app:layout_constraintStart_toStartOf="@id/etNewMeasures_secondType_night"
            app:layout_constraintTop_toTopOf="@id/newMeasuresHint_secondType_day" />

        <TextView
            android:id="@+id/newMeasuresHint_secondType_peak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statisticsItem_newMeasures_peakLabel"
            app:layout_constraintStart_toStartOf="@id/etNewMeasures_secondType_peak"
            app:layout_constraintTop_toTopOf="@id/newMeasuresHint_secondType_night" />

        <EditText
            android:id="@+id/etNewMeasures_secondType_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/measurementInfo"
            app:layout_constraintEnd_toStartOf="@id/etNewMeasures_secondType_night"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newMeasuresHint_secondType_day" />

        <EditText
            android:id="@+id/etNewMeasures_secondType_night"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toStartOf="@id/etNewMeasures_secondType_peak"
            app:layout_constraintStart_toEndOf="@id/etNewMeasures_secondType_day"
            app:layout_constraintTop_toBottomOf="@id/newMeasuresHint_secondType_day" />

        <EditText
            android:id="@+id/etNewMeasures_secondType_peak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toStartOf="@id/btnSubmit"
            app:layout_constraintStart_toEndOf="@id/etNewMeasures_secondType_night"
            app:layout_constraintTop_toBottomOf="@id/newMeasuresHint_secondType_day" />


        <!-- Кнопка и нижний текст едины для каждого типа -->
        <TextView
            android:id="@+id/measurementInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/charcoal_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Показания сданы 16.02.18 и будут учтены при следующем расчете 25.02.18" />

        <ImageButton
            android:id="@+id/btnSubmit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners_bg"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="@id/etNewMeasures_firstType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etNewMeasures_firstType" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/singleEditTextGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="etNewMeasures_firstType,newMeasuresHint_firstType" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/tripleEditTextGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="newMeasuresHint_secondType_day,
            newMeasuresHint_secondType_night,
            newMeasuresHint_secondType_peak,
            etNewMeasures_secondType_day,
            etNewMeasures_secondType_night,
            etNewMeasures_secondType_peak" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>